--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </style>
   </head>
   <body>
+    <div>
+      <h1>Typescript Online Quiz</h1>
+    </div>
     <div class="box">
       <header>
         <h2 class="light">Reliable, efficient delivery</h3>
