--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <div>
-      <h1>Python Online Quiz</h1>
+      <h1>Java Online Quiz</h1>
     </div>
     <div class="box">
       <header>
